<resources>
    <string name="app_name">AdoptMe Now</string>
    <string name="home">Beranda</string>
    <string name="saved">Disimpan</string>
    <string name="history">Riwayat</string>
    <string name="account">Akun</string>
    <string name="search_hint">Cari Hewan</string>
    <string name="search">Cari</string>
    <string name="recommendation">REKOMENDASI</string>
    <string name="share">Bagikan</string>
    <string name="share_url">https://adoptme.now/post?id=%s</string>
    <string name="save">Simpan</string>
    <string name="unsave">Batal Simpan</string>
    <string name="post_saved">Berhasil Memposting</string>
    <string name="check">Check</string>
    <string name="adopt">Adopsi</string>
    <string name="adopter_identity">Identitas Calon Adopter</string>
    <string name="adopter_info_title">INFORMASI ADOPTER</string>
    <string name="full_name">Nama lengkap</string>
    <string name="email">Email</string>
    <string name="phone_number">Nomor Handphone</string>
    <string name="profession">Profesi</string>
    <string name="address">Alamat</string>
    <string name="adopted_pet">Hewan yang ingin diadopsi</string>
    <string name="species">Jenis Hewan</string>
    <string name="pet_name">Nama hewan</string>
    <string name="gender">Jenis kelamin</string>
    <string name="adopt_reason">Alasan adopsi</string>
    <string name="send">Kirim</string>
    <string name="status_label">Status : </string>
    <string name="status_available"><font color="green">Tersedia</font></string>
    <string name="status_not_available"><font color="red">Sudah Diadopsi</font></string>
    <string name="description_label">Deskripsi : </string>
    <string name="description">Deskripsi</string>
    <string name="pet_info">Informasi Hewan</string>
    <string name="adoption_form">Formulir Adopsi</string>
    <string name="form_submited">Formulir adopsi berhasil dikirim!</string>
    <string name="view_detail">Lihat Detail</string>
    <string name="post">Post</string>
    <string name="form">form</string>
    <string name="login">Masuk</string>
    <string name="password">Password</string>
    <string name="register">Daftar</string>
    <string name="forgot_password">Lupa Password?</string>
    <string name="auth_failed">Email atau Password yang Anda masukkan salah</string>
    <string name="repeat_password">Ulangi Password</string>
    <string name="password_not_match">Password dan konfirmasi password tidak sama</string>
    <string name="register_success">Pendaftaran berhasil!</string>
    <string name="email_registered">Email ini sudah terdaftar</string>
    <string name="profile">Profil</string>
    <string name="logout">Logout</string>
    <string name="edit_profile">Edit Profil</string>
    <string name="no_phone">No. Hp</string>
    <string name="logout_success">Berhasil keluar</string>
    <string name="cant_empty">%s tidak boleh kosong</string>
    <string name="change_picture">Ubah foto</string>
    <string name="name">Nama</string>
    <string name="edit_profile_title">EDIT PROFIL</string>
    <string name="upload_image_failed">Gagal mengupload gambar</string>
    <string name="save_failed">Gagal menyimpan data</string>
    <string name="profile_saved">Profil berhasil disimpan!</string>
    <string name="saving_profile">Menyimpan profil...</string>
    <string name="my_post">Postingan Saya</string>
    <string name="see_all">Lihat semua &gt;</string>
    <string name="no_post">Belum ada post</string>
    <string name="confirm_delete_post">Anda yakin ingin menghapus post dengan judul "%s"?</string>
    <string name="deleting_post">Menghapus post "%s"...</string>
    <string name="delete_post_success">Post berhasil dihapus</string>
    <string name="yes">Ya</string>
    <string name="cancel">Batal</string>
    <string name="pet_kind">Jenis Hewan</string>
    <string name="add_image">Tambah Gambar</string>
    <string name="create_post">Buat Post</string>
    <string name="create_post_title">POST</string>
    <string name="creating_post">Menyimpan post…</string>
    <string name="post_created">Post berhasil disimpan!</string>
    <string name="post_edited">Post berhasil diedit!</string>
    <string name="require_image">Post harus memiliki setidaknya 1 gambar!</string>
    <string name="edit_post_title">EDIT POST</string>
    <string name="edit">Edit</string>
    <string name="notification">Notifikasi</string>
    <string name="notification_adopt_request">%s ingin mengadopsi %s</string>
    <string name="notification_adopt_response">Cek detail pengajuanmu %s</string>
    <string name="today">Hari ini</string>
    <string name="status_waiting">TUNGGU!!</string>
    <string name="status_accpeted">DITERIMA!!</string>
    <string name="ststus_rejected">DITOLAK</string>
    <string name="accept">Terima</string>
    <string name="reject">Tolak</string>
    <string name="your_form_accepted">Pengajuan Adopsi Berhasil dikonfirmasi</string>
    <string name="your_form_rejected">Maaf! Pengajuan Anda Untuk Adopsi Ditolak</string>
    <string name="form_accepted">Form Pengajuan dari Adopter Sukses Dikonfirmasi</string>
    <string name="form_rejected">Form Pengajuan dari Adopter Ditolak</string>
    <string name="print_pdf">unduh PDF</string>
    <string name="loading">Loading...</string>
</resources>
