<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".post.CreatePostFragment">

        <View
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="?colorPrimary"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:paddingVertical="16dp"
            android:paddingHorizontal="24dp"
            android:background="@drawable/adopt_form_bg">

            <TextView
                android:id="@+id/title_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pet_kind"
                app:layout_constraintTop_toTopOf="parent"/>

            <EditText
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:inputType="text"
                android:background="@drawable/simple_form_input"
                app:layout_constraintTop_toBottomOf="@id/title_label"/>

            <TextView
                android:id="@+id/description_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/description"
                app:layout_constraintTop_toBottomOf="@id/title"/>

            <EditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/simple_form_input"
                android:gravity="top|start"
                android:minLines="3"
                android:maxLines="3"
                app:layout_constraintTop_toBottomOf="@id/description_label"/>

            <TextView
                android:id="@+id/phone_number_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/no_phone"
                app:layout_constraintTop_toBottomOf="@id/description"/>

            <EditText
                android:id="@+id/phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/simple_form_input"
                android:inputType="phone"
                android:autofillHints="phone"
                app:layout_constraintTop_toBottomOf="@id/phone_number_label"/>

            <TextView
                android:id="@+id/address_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/address"
                android:inputType="text"
                app:layout_constraintTop_toBottomOf="@id/phone_number"/>

            <EditText
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/simple_form_input"
                app:layout_constraintTop_toBottomOf="@id/address_label"/>

            <TextView
                android:id="@+id/add_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/add_image"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/address"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/image_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="-4dp"
                app:layout_constraintTop_toBottomOf="@id/add_image"/>

            <TextView
                android:id="@+id/submit_button"
                style="@style/primaryButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</layout>