<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/mainFragment"
        android:name="com.kelompok5.adoptmenow.MainFragment"
        tools:label="MainFragment"
        tools:layout="@layout/fragment_main" >
        <action
            android:id="@+id/action_mainFragment_to_adoptionInfoFragment"
            app:destination="@id/adoptionInfoFragment" />
        <action
            android:id="@+id/action_mainFragment_to_searchResultFragment"
            app:destination="@id/searchResultFragment" />
        <action
            android:id="@+id/action_mainFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/mainFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_mainFragment_to_editAccountFragment"
            app:destination="@id/editAccountFragment" />
        <action
            android:id="@+id/action_mainFragment_to_createPostFragment"
            app:destination="@id/createPostFragment" />
        <action
            android:id="@+id/action_mainFragment_to_notificationFragment"
            app:destination="@id/notificationFragment" />
        <action
            android:id="@+id/action_mainFragment_to_adoptDetailFragment"
            app:destination="@id/adoptDetailFragment" />
        <action
            android:id="@+id/action_mainFragment_to_myPostFragment"
            app:destination="@id/myPostFragment" />
        <action
            android:id="@+id/action_mainFragment_to_myPostFragment2"
            app:destination="@id/myPostFragment" />
        <action
            android:id="@+id/action_mainFragment_to_editPostFragment"
            app:destination="@id/editPostFragment" />
    </fragment>
    <fragment
        android:id="@+id/adoptionInfoFragment"
        android:name="com.kelompok5.adoptmenow.petinfo.PetInfoFragment"
        android:label="@string/pet_info"
        tools:layout="@layout/fragment_pet_info" >
        <action
            android:id="@+id/action_adoptionInfoFragment_to_adoptionFormFragment"
            app:destination="@id/adoptionFormFragment" />
        <argument
            android:name="petInfo"
            app:argType="com.kelompok5.adoptmenow.petinfo.PetInfo"
            app:nullable="true" />
        <argument
            android:name="postId"
            app:argType="string"
            app:nullable="true" />
    </fragment>
    <fragment
        android:id="@+id/adoptionFormFragment"
        android:name="com.kelompok5.adoptmenow.adoptform.AdoptionFormFragment"
        android:label="@string/adoption_form"
        tools:layout="@layout/fragment_adoption_form" >
        <argument
            android:name="post"
            app:argType="com.kelompok5.adoptmenow.petinfo.PetInfo" />
    </fragment>
    <fragment
        android:id="@+id/searchResultFragment"
        android:name="com.kelompok5.adoptmenow.search.SearchResultFragment"
        android:label=""
        tools:layout="@layout/fragment_search_result">
        <action
            android:id="@+id/action_searchResultFragment_to_adoptionInfoFragment"
            app:destination="@id/adoptionInfoFragment" />
        <argument
            android:name="query"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.kelompok5.adoptmenow.account.LoginFragment"
        android:label="LoginFragment"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_loginFragment_to_registerFragment"
            app:destination="@id/registerFragment" />
        <action
            android:id="@+id/action_loginFragment_to_mainFragment"
            app:destination="@id/mainFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/registerFragment"
        android:name="com.kelompok5.adoptmenow.account.RegisterFragment"
        android:label="RegisterFragment"
        tools:layout="@layout/fragment_register" />
    <fragment
        android:id="@+id/editAccountFragment"
        android:name="com.kelompok5.adoptmenow.account.EditAccountFragment"
        android:label="@string/edit_profile_title"
        tools:layout="@layout/fragment_edit_account" />
    <fragment
        android:id="@+id/createPostFragment"
        android:name="com.kelompok5.adoptmenow.post.CreatePostFragment"
        android:label="@string/create_post_title"
        tools:layout="@layout/fragment_create_post" >
        <action
            android:id="@+id/action_createPostFragment_to_postSuccessFragment"
            app:destination="@id/postSuccessFragment"
            app:popUpTo="@id/createPostFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/notificationFragment"
        android:name="com.kelompok5.adoptmenow.notification.NotificationFragment"
        android:label="@string/notification"
        tools:layout="@layout/fragment_notification" >
        <action
            android:id="@+id/action_notificationFragment_to_confirmAdoptionFragment"
            app:destination="@id/confirmAdoptionFragment" />
        <action
            android:id="@+id/action_notificationFragment_to_confirmResultFragment"
            app:destination="@id/confirmResultFragment" />
    </fragment>
    <fragment
        android:id="@+id/adoptDetailFragment"
        android:name="com.kelompok5.adoptmenow.history.AdoptDetailFragment"
        android:label=""
        tools:layout="@layout/fragment_adopt_detail">
        <argument
            android:name="data"
            app:argType="com.kelompok5.adoptmenow.adoptform.AdoptionForm" />
    </fragment>
    <fragment
        android:id="@+id/myPostFragment"
        android:name="com.kelompok5.adoptmenow.post.MyPostFragment"
        android:label="@string/my_post"
        tools:layout="@layout/fragment_my_post">
        <action
            android:id="@+id/action_myPostFragment_to_adoptionInfoFragment"
            app:destination="@id/adoptionInfoFragment" />
        <action
            android:id="@+id/action_myPostFragment_to_editPostFragment"
            app:destination="@id/editPostFragment" />
    </fragment>
    <fragment
        android:id="@+id/editPostFragment"
        android:name="com.kelompok5.adoptmenow.post.EditPostFragment"
        android:label="@string/edit_post_title"
        tools:layout="@layout/fragment_create_post">
        <argument android:name="data"
            app:argType="com.kelompok5.adoptmenow.petinfo.PetInfo" />
    </fragment>
    <fragment
        android:id="@+id/postSuccessFragment"
        android:name="com.kelompok5.adoptmenow.post.PostSuccessFragment"
        android:label=""
        tools:layout="@layout/fragment_post_success"/>
    <fragment
        android:id="@+id/confirmAdoptionFragment"
        android:name="com.kelompok5.adoptmenow.adoptform.ConfirmAdoptionFragment"
        android:label="@string/adopter_identity"
        tools:layout="@layout/fragment_confirm_adoption" >
        <argument
            android:name="form"
            app:argType="com.kelompok5.adoptmenow.adoptform.AdoptionForm" />
        <action
            android:id="@+id/action_confirmAdoptionFragment_to_confirmResultFragment"
            app:destination="@id/confirmResultFragment"
            app:popUpTo="@id/confirmAdoptionFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/confirmResultFragment"
        android:name="com.kelompok5.adoptmenow.adoptform.ConfirmResultFragment"
        android:label=""
        tools:layout="@layout/fragment_confirm_result" >
        <argument
            android:name="result"
            app:argType="string" />
    </fragment>
</navigation>
