<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.kelompok5.adoptmenow.account.AccountViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".account.EditAccountFragment">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/bg_edit"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/photo"
            android:layout_width="122dp"
            android:layout_height="0dp"
            android:layout_marginTop="100dp"
            android:background="@drawable/simple_border"
            android:padding="1dp"
            android:scaleType="centerCrop"
            android:src="@drawable/user_solid"
            app:imageSrc="@{viewModel.photo}"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/change_photo_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/button_bw"
            android:text="@string/change_picture"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/photo" />

        <TextView
            android:id="@+id/name_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="92dp"
            android:text="@string/name"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/change_photo_button"/>

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/form_grey"
            android:layout_marginHorizontal="32dp"
            android:text="@{viewModel.user.name}"
            app:layout_constraintTop_toBottomOf="@id/name_label"/>

        <TextView
            android:id="@+id/address_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="8dp"
            android:text="@string/address"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/name"/>

        <EditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/form_grey"
            android:layout_marginHorizontal="32dp"
            android:text="@{viewModel.user.address}"
            app:layout_constraintTop_toBottomOf="@id/address_label"/>

        <TextView
            android:id="@+id/phone_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="8dp"
            android:text="@string/no_phone"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/address"/>

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/form_grey"
            android:layout_marginHorizontal="32dp"
            android:text="@{viewModel.user.phone}"
            android:inputType="phone"
            app:layout_constraintTop_toBottomOf="@id/phone_label"/>

        <TextView
            android:id="@+id/email_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="8dp"
            android:text="@string/email"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/phone"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/form_grey"
            android:layout_marginHorizontal="32dp"
            android:inputType="textEmailAddress"
            android:text="@{viewModel.user.email}"
            app:layout_constraintTop_toBottomOf="@id/email_label"/>

        <TextView
            android:id="@+id/password_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="8dp"
            android:text="@string/password"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/email"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/form_grey"
            android:layout_marginHorizontal="32dp"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@id/password_label"/>

        <TextView
            android:id="@+id/saveButton"
            style="@style/primaryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password" />

        <View
            android:id="@+id/loading_overlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#60000000" />

        <ProgressBar
            android:id="@+id/progress_circular"
            style="?android:progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="progress_circular,loading_overlay" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>